--- a/start/download.html
+++ b/start/download.html
@@ -183,11 +183,11 @@
 <ul>
 <li><strong>Latest stable release</strong>: <a href='http://www.apache.org/dyn/closer.cgi/wicket/6.12.0'>6.12.0</a></li>
 
-<li><strong>Latest 6.x release</strong>: <a href='http://archive.apache.org/dist/wicket/6.12.0'>6.12.0</a></li>
+<li><strong>Latest 6.x release</strong>: <a href='http://www.apache.org/dyn/closer.cgi/wicket/6.12.0'>6.12.0</a></li>
 
-<li><strong>Latest 1.5.x release</strong>: <a href='http://archive.apache.org/dist/wicket/1.5.10'>1.5.10</a></li>
+<li><strong>Latest 1.5.x release</strong>: <a href='http://www.apache.org/dyn/closer.cgi/wicket/1.5.10'>1.5.10</a></li>
 
-<li><strong>Latest 1.4.x release</strong> (no longer maintained): <a href='http://archive.apache.org/dist/wicket/1.4.22'>1.4.22</a></li>
+<li><strong>Latest 1.4.x release</strong> (no longer maintained): <a href='http://www.apache.org/dyn/closer.cgi/wicket/1.4.22'>1.4.22</a></li>
 
 <li><strong>Archived releases</strong>: <a href='http://archive.apache.org/dist/wicket'>http://archive.apache.org/dist/wicket</a></li>
 </ul>
@@ -240,16 +240,14 @@
     <span class='nt'>&lt;artifactId&gt;</span>wicket-core<span class='nt'>&lt;/artifactId&gt;</span>
     <span class='nt'>&lt;version&gt;</span>6.12.0<span class='nt'>&lt;/version&gt;</span>
 <span class='nt'>&lt;/dependency&gt;</span>
-</code></pre>
-</div>
+</code></pre></div>
 <p>For the SLF4J log4j binding:</p>
 <div class='highlight'><pre><code class='xml'><span class='nt'>&lt;dependency&gt;</span>
     <span class='nt'>&lt;groupId&gt;</span>org.slf4j<span class='nt'>&lt;/groupId&gt;</span>
     <span class='nt'>&lt;artifactId&gt;</span>slf4j-log4j12<span class='nt'>&lt;/artifactId&gt;</span>
     <span class='nt'>&lt;version&gt;</span>1.6.4<span class='nt'>&lt;/version&gt;</span>
 <span class='nt'>&lt;/dependency&gt;</span>
-</code></pre>
-</div>
+</code></pre></div>
 <h2 id='snapshots_and_latest_bleedingedge_code'>SNAPSHOTs and latest bleeding-edge code</h2>
 
 <p>If you wish to build the latest code from scratch, master and branches live in the Git repository: https://git-wip-us.apache.org/repos/asf/wicket.git</p>
@@ -283,8 +281,7 @@
         <span class='nt'>&lt;layout&gt;</span>default<span class='nt'>&lt;/layout&gt;</span>
     <span class='nt'>&lt;/repository&gt;</span>
 <span class='nt'>&lt;/repositories&gt;</span>
-</code></pre>
-</div>
+</code></pre></div>
 		</div>
         <div id="clearer"></div>
 		<div id="footer"><span>
