WICKET-5433 1.4.x gets security updates only
git-svn-id: https://svn.apache.org/repos/asf/wicket/common/site/trunk/_site@1546629 13f79535-47bb-0310-9956-ffa450edef68

--- a/start/download.html
+++ b/start/download.html
@@ -187,7 +187,7 @@
 
 <li><strong>Latest 1.5.x release</strong>: <a href='http://www.apache.org/dyn/closer.cgi/wicket/1.5.10'>1.5.10</a></li>
 
-<li><strong>Latest 1.4.x release</strong> (no longer maintained): <a href='http://www.apache.org/dyn/closer.cgi/wicket/1.4.22'>1.4.22</a></li>
+<li><strong>Latest 1.4.x release</strong> (security updates only): <a href='http://www.apache.org/dyn/closer.cgi/wicket/1.4.22'>1.4.22</a></li>
 
 <li><strong>Archived releases</strong>: <a href='http://archive.apache.org/dist/wicket'>http://archive.apache.org/dist/wicket</a></li>
 </ul>
