--- a/contribute/patch.html
+++ b/contribute/patch.html
@@ -63,7 +63,7 @@
 	</h5>
 	<ul>
 		<li>
-			<a href="/guide" title="User Guide">User Guide</a> | <a href="/guide/guide/single.pdf" title="User Guide in pdf">pdf</a>
+			<a href="/start/userguide.html" title="User Guide">User Guide</a>
 		</li>
 		<li>
 			<a href="/learn/examples" title="Examples">Examples</a>
@@ -199,8 +199,7 @@
 </ul>
 <div class='highlight'><pre><code class='console'><span class='go'>git add any_files_you_created_modified_or_deleted</span>
 <span class='go'>git diff --cached &gt; /tmp/fix-WICKET-NNNN.patch</span>
-</code></pre>
-</div>
+</code></pre></div>
 <ul>
 <li>Attach that file (/tmp/fix-WICKET-NNNN.patch) to the <a href='https://issues.apache.org/jira/browse/WICKET'>JIRA</a></li>
 </ul>
