--- a/learn/books/index.html
+++ b/learn/books/index.html
@@ -63,7 +63,7 @@
 	</h5>
 	<ul>
 		<li>
-			<a href="/guide" title="User Guide">User Guide</a> | <a href="/guide/guide/single.pdf" title="User Guide in pdf">pdf</a>
+			<a href="/start/userguide.html" title="User Guide">User Guide</a>
 		</li>
 		<li>
 			<a href="/learn/examples" title="Examples">Examples</a>
@@ -175,7 +175,7 @@
 		<div id="contentbody">
 			<h1>Books about Wicket</h1>
 			<p>Several books have been written about Apache Wicket, 5 in English, 2 in German and 1 in Japanese. Click on a cover to learn more about each book.</p>
-<a href='freeguide.html'><img alt='Apache Wicket Reference Guide' height='300px' src='freeguide.png' title='Apache Wicket Free Reference Guide' /></a><a href='awc.html'><img alt='Apache Wicket Cookbook cover' height='300px' src='awc.png' title='Apache Wicket Cookbook' /></a><a href='wia.html'><img alt='Wicket in Action cover' height='300px' src='wia.png' title='Wicket in Action' /></a><a href='koda.html'><img alt=' Komponentenbasiert und objektorientiert - das alternative Java-Webframework cover' height='300px' src='koda.jpg' title=' Komponentenbasiert und objektorientiert- das alternative Java-Webframework' /></a><a href='ewdww.html'><img alt='Enjoying Web Development with Wicket cover' height='300px' src='ewdww.png' title='Enjoying Web Development with Wicket' /></a><a href='prowicket.html'><img alt='Pro Wicket cover' height='300px' src='prowicket.png' title='Pro Wicket' /></a><a href='paxisbuchwicket.html'><img alt='Praxisbuch Wicket cover' height='300px' src='praxisbuchwicket.png' title='Praxisbuch Wicket' /></a><a href='kwij.html'><img alt='Wicket: Komponentenbasierte Webanwendungen in Java cover' height='300px' src='kwij.png' title='Wicket: Komponentenbasierte Webanwendungen in Java' /></a><a href='wicket-jp.html'><img alt='Wicket Japanese cover' height='300px' src='wicket-jp.png' title='Wicket Japanese' /></a>
+<a href='freeguide.html'><img src='freeguide.png' title='Apache Wicket Free Reference Guide' height='300px' alt='Apache Wicket Reference Guide' /></a><a href='awc.html'><img src='awc.png' title='Apache Wicket Cookbook' height='300px' alt='Apache Wicket Cookbook cover' /></a><a href='wia.html'><img src='wia.png' title='Wicket in Action' height='300px' alt='Wicket in Action cover' /></a><a href='koda.html'><img src='koda.jpg' title=' Komponentenbasiert und objektorientiert- das alternative Java-Webframework' height='300px' alt=' Komponentenbasiert und objektorientiert - das alternative Java-Webframework cover' /></a><a href='ewdww.html'><img src='ewdww.png' title='Enjoying Web Development with Wicket' height='300px' alt='Enjoying Web Development with Wicket cover' /></a><a href='prowicket.html'><img src='prowicket.png' title='Pro Wicket' height='300px' alt='Pro Wicket cover' /></a><a href='paxisbuchwicket.html'><img src='praxisbuchwicket.png' title='Praxisbuch Wicket' height='300px' alt='Praxisbuch Wicket cover' /></a><a href='kwij.html'><img src='kwij.png' title='Wicket: Komponentenbasierte Webanwendungen in Java' height='300px' alt='Wicket: Komponentenbasierte Webanwendungen in Java cover' /></a><a href='wicket-jp.html'><img src='wicket-jp.png' title='Wicket Japanese' height='300px' alt='Wicket Japanese cover' /></a>
 		</div>
         <div id="clearer"></div>
 		<div id="footer"><span>
