--- a/start/quickstart.html
+++ b/start/quickstart.html
@@ -63,7 +63,7 @@
 	</h5>
 	<ul>
 		<li>
-			<a href="/guide" title="User Guide">User Guide</a> | <a href="/guide/guide/single.pdf" title="User Guide in pdf">pdf</a>
+			<a href="/start/userguide.html" title="User Guide">User Guide</a>
 		</li>
 		<li>
 			<a href="/learn/examples" title="Examples">Examples</a>
@@ -217,15 +217,15 @@
 	}
 </script><div id='mvncmd'>
 	<div>
-		<label for='groupId' title='Base Package'>GroupId:</label>
-		<input id='groupId' onkeyup='changeIt();' type='text' value='com.mycompany' /><span title='Base Package'>&nbsp;(?)</span><br />
+		<label title='Base Package' for='groupId'>GroupId:</label>
+		<input value='com.mycompany' onkeyup='changeIt();' id='groupId' type='text' /><span title='Base Package'>&nbsp;(?)</span><br />
 	</div>
 	<div>
-		<label for='artifactId' title='Project Name'>ArtifactId:</label> 
-		<input id='artifactId' onkeyup='changeIt();' type='text' value='myproject' /><span title='Project Name'>&nbsp;(?)</span><br />
+		<label title='Project Name' for='artifactId'>ArtifactId:</label> 
+		<input value='myproject' onkeyup='changeIt();' id='artifactId' type='text' /><span title='Project Name'>&nbsp;(?)</span><br />
 	</div>
 	<div>
-		<label for='version' title='Wicket Version'>Version:</label>
+		<label title='Wicket Version' for='version'>Version:</label>
 		<select id='version' onchange='changeIt();'>
 
 		
@@ -249,14 +249,14 @@
 		
 
 		
-			<option selected='selected' value='6.12.0'>6.12.0</option>
+			<option value='6.12.0' selected='selected'>6.12.0</option>
 		
 
 		</select><span title='Wicket Version'>&nbsp;(?)</span>
 	</div>
 	<div>
-		<label for='cmdLine' id='cmdLabel'>Command Line:</label>
-		<textarea id='cmdLine' onfocus='this.select();'>
+		<label id='cmdLabel' for='cmdLine'>Command Line:</label>
+		<textarea onfocus='this.select();' id='cmdLine'>
 		</textarea>
 		<script>changeIt();</script>
 	</div>
