--- a/start/userguide.html
+++ b/start/userguide.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Apache Wicket - Books — Praxisbuch Wicket</title>
+    <title>Apache Wicket - Wicket User Guide</title>
 
 	<link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen" />
 
@@ -173,28 +173,18 @@
 </div>
 
 		<div id="contentbody">
-			<h1>Books — Praxisbuch Wicket</h1>
-			<p>Praxisbuch Wicket, written by by Michael Mosmann. It was published by Hanser Fachbuch in September 2009.</p>
+			<h1>Wicket User Guide</h1>
+			<p>The user guide has been written using the doc engine from Grails project and is available in the following formats:</p>
 
-<h2 id='description'>Description</h2>
+<ul>
+<li><a href='/guide/guide/index.html'>HTML</a></li>
 
-<p>DER SCHNELLE WEG ZU WEB 2.0</p>
+<li><a href='/guide/guide/single.html'>HTML (single page)</a></li>
 
-<p>Erfahren Sie, welch mächtige Unterstützung Wicket Java-Programmierern bei der Entwicklung von Web-2.0-Anwendungen bietet Folgen Sie Schritt für Schritt den praxisnahen Beispielen und erleben Sie, wie eine Anwendung mit Wicket entsteht. Nutzen Sie die praxiserprobten Lösungen dafür, die Entwicklung Ihrer Anwendungen zu vereinfachen und zu beschleunigen. Im Internet: Laufend aktuelle Informationen zu Wicket finden Sie auf der Website zu diesem Buch www.wicket-praxis.de Wicket ist ein mächtiges Framework für die Entwicklung von Web-2.0-Anwendungen, die auf Java basieren. Es bietet eine einfache Integration von AJAX, ohne dass Sie sich mit XML oder JavaScript auseinandersetzen müssen, und erleichtert Ihnen die Wiederverwendung, weil es konsequent komponentenorientiert arbeitet.</p>
+<li><a href='/guide/guide/single.pdf'>PDF</a></li>
+</ul>
 
-<p>In diesem Buch erfahren Sie, wie Wicket Sie bei der Entwicklung von Web-2.0-Anwendungen unterstützt und welche Vorteile es bietet. Der Autor entwickelt gemeinsam mit Ihnen eine komplette Anwendung, erklärt unterwegs die wesentlichen Konzepte von Wicket und zeigt elegante, praxiserprobte Lösungen u.a. für Aufgabenstellungen wie suchmaschinenoptimierte Seiten oder Applikationen mit Desktop-Charakter.</p>
-
-<p>Das umfangreiche Kapitel &#8220;Wicket in der Praxis&#8221; bietet Ihnen eine Reihe von effektiven Lösungsvorschlägen für typische Aufgabenstellungen.</p>
-
-<p>Aus dem Inhalt: Die Grundstruktur aufsetzen und mit Leben füllen - Die Wicket-Architektur - Modelle - Komponenten - Basiskomponenten - Listen und Tabellen - Formulare - Sessions und Security - Wicket in der Praxis - Fehlersuche</p>
-
-<h2 id='about_the_author'>About the author</h2>
-
-<p>Michael Mosmann has more than 10 years of Java experience, especially with web based b2c application.</p>
-
-<h2 id='book_details'>Book details</h2>
-
-<p>Title Praxisbuch Wicket: Professionelle Web-2.0-Anwendungen entwickeln Author Michael Mosmann Version covered Wicket 1.4 URL Praxisbuch Wicket Hardcover 312 pages Publisher Hanser Date September 1, 2009 Language German ISBN-10 3446419098 ISBN-13 978-3446419094 Buy Amazon Hanser</p>
+<p>For more details about the format used to write the guide and to know how to contrinute, see <a href='/guide/guide/chapter26.html'>the relative chapter</a>.</p>
 		</div>
         <div id="clearer"></div>
 		<div id="footer"><span>
