--- a/start/download.html
+++ b/start/download.html
@@ -255,7 +255,9 @@
 <p>Branches:</p>
 
 <ul>
-<li><strong>6.x</strong>: master</li>
+<li><strong>7.x</strong>: master</li>
+
+<li><strong>6.x</strong>: wicket-6.x</li>
 
 <li><strong>1.5.x</strong>: wicket-1.5.x</li>
 
