Syntax error in the quickstart
git-svn-id: https://svn.apache.org/repos/asf/wicket/common/site/trunk/_site@1558493 13f79535-47bb-0310-9956-ffa450edef68

--- a/start/quickstart.html
+++ b/start/quickstart.html
@@ -258,7 +258,7 @@
 		<label for='cmdLine' id='cmdLabel'>Command Line:</label>
 		<textarea id='cmdLine' onfocus='this.select();'>
 		</textarea>
-		<script>changeIt();></script>
+		<script>changeIt();</script>
 	</div>
 	<br />
 </div>
