WICKET-5485 Broken links in wicket guide
git-svn-id: https://svn.apache.org/repos/asf/wicket/common/site/trunk/_site@1561723 13f79535-47bb-0310-9956-ffa450edef68

--- a/guide/guide/single.html
+++ b/guide/guide/single.html
@@ -2731,7 +2731,7 @@ Our datepicker is not ready yet to be used with AJAX. In chapter 16 we will see 
 
 
 <h2 id="chapter15_3">16.3 Summary</h2>
-<p class="paragraph"/>In this brief chapter we have seen how custom components can be integrated with <a href="http://en.wikipedia.org/wiki/Dynamic_HTM" target="blank">DHTML</a> technologies. To do so we have used most of what we have learnt in this guide. Now we are able to build complex components with a rich user experience. However this is not enough yet to develop <a href="http://en.wikipedia.org/wiki/Web_2.0" target="blank">Web 2.0</a> applications. We still have to cover a fundamental technology like AJAX and some other Wicket-related topics that will help us building our application in more modular and efficient way.<p class="paragraph"/><p class="paragraph"/>
+<p class="paragraph"/>In this brief chapter we have seen how custom components can be integrated with <a href="http://en.wikipedia.org/wiki/Dynamic_HTML" target="blank">DHTML</a> technologies. To do so we have used most of what we have learnt in this guide. Now we are able to build complex components with a rich user experience. However this is not enough yet to develop <a href="http://en.wikipedia.org/wiki/Web_2.0" target="blank">Web 2.0</a> applications. We still have to cover a fundamental technology like AJAX and some other Wicket-related topics that will help us building our application in more modular and efficient way.<p class="paragraph"/><p class="paragraph"/>
 
 
 <h1 id="chapter16">17 Wicket advanced topics</h1>
