Fixed references to contribute section
git-svn-id: https://svn.apache.org/repos/asf/wicket/common/site/trunk/_site@1565661 13f79535-47bb-0310-9956-ffa450edef68

--- a/start/userguide.html
+++ b/start/userguide.html
@@ -184,7 +184,7 @@
 <li><a href='/guide/guide/single.pdf'>PDF</a></li>
 </ul>
 
-<p>For more details about the format used to write the guide and to know how to contrinute, see <a href='/guide/guide/chapter26.html'>the relative chapter</a>.</p>
+<p>For more details about the format used to write the guide and to know how to contrinute, see <a href='/guide/guide/contributing.html'>the relative chapter</a>.</p>
 		</div>
         <div id="clearer"></div>
 		<div id="footer"><span>
