--- a/guide/guide/pages/repeaters_4.html
+++ b/guide/guide/pages/repeaters_4.html
@@ -160,7 +160,7 @@ function addJsClass() {
                 
 
 <h2 id="repeaters_4">13.4 Pageable repeaters</h2>
-<p class="paragraph"/>Wicket offers a number of components that should be used when we have to display a big number of  items (for example the results of a select SQL query).<p class="paragraph"/>All these components implements interface <code>org.apache.wicket.markup.html.navigation.paging.IPageable</code> and use interface <code>IDataProvider</code> (placed in package <code>org.apache.wicket.markup.repeater.data</code>) as data source. This interface is designed to support data paging. We will see an example of data paging later in paragraph 11.4.2.<p class="paragraph"/>The methods defined by IDataProvider are the following:
+<p class="paragraph"/>Wicket offers a number of components that should be used when we have to display a big number of  items (for example the results of a select SQL query).<p class="paragraph"/>All these components implement interface <code>org.apache.wicket.markup.html.navigation.paging.IPageable</code> and use interface <code>IDataProvider</code> (placed in package <code>org.apache.wicket.markup.repeater.data</code>) as data source. This interface is designed to support data paging. We will see an example of data paging later in paragraph 11.4.2.<p class="paragraph"/>The methods defined by IDataProvider are the following:
 <ul class="star">
 <li>iterator(long first, long count): returns an iterator over a subset of the entire dataset. The subset starts from the item at position first and includes all the next count items (i.e. it's the closed interval first,first+count).</li>
 <li>size(): gets the size of the entire dataset.</li>
@@ -214,6 +214,7 @@ add(dataView);</pre></div><p class="paragraph"/>Please note that in the code abo
 &#125;</pre></div><p class="paragraph"/>The data of a single country (ISO code, name, long name, capital and population) are handled with an array of strings. The usage of PagingNavigator it's quite straightforward as we need to simply pass the pageable repeater to its constructor.<p class="paragraph"/>To explore the other pageable repeaters shipped with Wicket you can visit the page at <a href="http://www.wicket-library.com/wicket-examples/repeater/" target="blank">http://www.wicket-library.com/wicket-examples/repeater/</a> where you can find live examples of these components.<p class="paragraph"/><blockquote class="note">
 Wicket provides also component PageableListView which is a sublcass of ListView that implements interface IPageable, hence it can be considered a pageable repeaters even if it doesn't use interface IDataProvider as data source.
 </blockquote>
+
 
 
                 <div style="clear:both;margin-top:15px;"></div>
