WICKET-5671 Rename log4j.properties in the quickstart when creating a project for WildFly
git-svn-id: https://svn.apache.org/repos/asf/wicket/common/site/trunk/_site@1617357 13f79535-47bb-0310-9956-ffa450edef68

--- a/learn/books/index.html
+++ b/learn/books/index.html
@@ -190,8 +190,7 @@
 			<p>Several books have been written about Apache Wicket, 5 in English, 2 in German
 and 1 in Japanese. Click on a cover to learn more about each book.</p>
 
-<p><a href="freeguide.html"><img src="freeguide.png" height="300px" alt="Apache Wicket Reference Guide" title="Apache Wicket Free Reference Guide" /></a>
-<a href="awc.html"><img src="awc.png" height="300px" alt="Apache Wicket Cookbook cover" title="Apache Wicket Cookbook" /></a>
+<p><a href="awc.html"><img src="awc.png" height="300px" alt="Apache Wicket Cookbook cover" title="Apache Wicket Cookbook" /></a>
 <a href="wia.html"><img src="wia.png" height="300px" alt="Wicket in Action cover" title="Wicket in Action" /></a>
 <a href="koda.html"><img src="koda.jpg" height="300px" alt=" Komponentenbasiert und objektorientiert - das alternative Java-Webframework cover" title=" Komponentenbasiert und objektorientiert- das alternative Java-Webframework" /></a>
 <a href="ewdww.html"><img src="ewdww.png" height="300px" alt="Enjoying Web Development with Wicket cover" title="Enjoying Web Development with Wicket" /></a>
