Add Apache Nutch to the list of Apache projects using Wicket
git-svn-id: https://svn.apache.org/repos/asf/wicket/common/site/trunk/_site@1627764 13f79535-47bb-0310-9956-ffa450edef68

--- a/apache/friends.html
+++ b/apache/friends.html
@@ -207,6 +207,11 @@
 	<h4>Apache Syncope is an Open Source system for managing digital identities in enterprise environments. It uses Apache Wicket for its <a target="_blank" href="https://syncope.apache.org/architecture.html#The_console">web management console</a>.</h4>
 </div>
 
+<div style="margin-top: 40px">
+	<h2><a href="https://nutch.apache.org/" target="_blank">Apache Nutch</a></h2>
+	<h4>Apache Nutch is a well matured, production ready web crawler. Since version 2.3 it uses Apache Wicket for its <a target="_blank" href="https://nutch.apache.org/#22-september-2014-wicket-webapp-now-part-of-nutch-2x-codebase">web management console</a>.</h4>
+</div>
+
 		</div>
         <div id="clearer"></div>
 		<div id="footer"><span>
